File: plugins/nexus-repository-raw/src/main/java/org/sonatype/nexus/repository/raw/internal/cleanup/RawCleanupPolicyConfiguration.java